# osm-reader

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  setup.py
osm_filter/: __init__.py  _python_api.py
src/: lib.rs
tests/: test_osm_filter.py
