[package]
name = "osm-filter"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.1"
features = ["extension-module"]

[dependencies]
osmpbfreader = "0.14.0"
serde_json = "1.0"
serde = { version="=1.0.118", features = ["derive"] }

[profile.release]
lto = true
